	Damon Rand
	Christian Riege
	Jean-Baptiste Quenot
	Andreas Sahlbach
	Gilles Scokart
	John Shields
	Johan Stuyts
	John Williams
	Jaroslaw Wypychowski

   version in SVN
=====================================
- NEW: Hide private or specific conf when publishing (IVY-77)

- IMPROVEMENT: Allow "main" parameters to be passed directly (instead of using -args flag) (IVY-480) (thanks to Archie Cobbs)

- FIX: install ant task: requires default resolver in ivy settings (IVY-477)
- FIX: Ant project reference lost from context on multiple ant calls in single thread (IVY-497) (thanks to Jaroslaw Wypychowski)
- FIX: EOL in the doc pages (IVY-470)
- FIX: Cache is storing ArtifactOrigin properties with no guarantee of unicity and types telescope during resolve. (IVY-430) (thanks to Stephane Bailliez)
- FIX: ivy:install ant task does not fail on error (IVY-475) (thanks to Jeffrey Blatttman)
- FIX: Credentials are shown in build log even if debug is not enabled (IVY-486) (thanks to Gilles Scokart)
- FIX: Post-Resolve task shouldn't set the 'resolveid' (IVY-489)
- FIX: build fails without emma code coverage JARs present (IVY-478)

   2.0.0-alpha1-incubating
=====================================
- NEW: define artifacts not declared by the dependency module descriptor (IVY-419)
- NEW: Module wide exclude (IVY-431)
- NEW: The default public resolver used is now ibiblio with m2 compatible mode (IVY-463)

- IMPROVE: OSGIfy ivy artifacts (IVY-464) (thanks to Costin Leau)
- IMPROVE: Let user specify Ivy file when using a post-resolve task (IVY-455)
- IMPROVE: IvyArtifactProperty and IvyArtifactReport tasks should be a post resolve task (IVY-452)
- IMPROVE: Rename ivy configuration in settings to remove ambiguity on configuration meaning (IVY-438)
- IMPROVE: Please typedef CacheResolver as "cache" for us (IVY-359)
- IMPROVE: ivy:retrieve should be able to create symlinks (IVY-353) (thanks to John Williams)