@@ -785,6 +785,14 @@ name|String
 name|_classifier
 decl_stmt|;
 specifier|private
+name|String
+name|_type
+decl_stmt|;
+specifier|private
+name|String
+name|_ext
+decl_stmt|;
+specifier|private
 name|boolean
 name|_optional
 init|=
@@ -1130,6 +1138,20 @@ argument_list|(
 name|mrid
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|_type
+operator|==
+literal|null
+condition|)
+block|{
+name|_type
+operator|=
+name|_ext
+operator|=
+literal|"jar"
+expr_stmt|;
+block|}
 name|_md
 operator|.
 name|addArtifact
@@ -1146,9 +1168,9 @@ argument_list|()
 argument_list|,
 name|_module
 argument_list|,
-literal|"jar"
+name|_type
 argument_list|,
-literal|"jar"
+name|_ext
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1773,6 +1795,30 @@ if|if
 condition|(
 name|context
 operator|.
+name|equals
+argument_list|(
+literal|"project/parent/packaging"
+argument_list|)
+operator|&&
+name|_type
+operator|==
+literal|null
+condition|)
+block|{
+name|_type
+operator|=
+name|txt
+expr_stmt|;
+name|_ext
+operator|=
+name|txt
+expr_stmt|;
+return|return;
+block|}
+if|if
+condition|(
+name|context
+operator|.
 name|startsWith
 argument_list|(
 literal|"project/parent"
@@ -1894,6 +1940,29 @@ argument_list|)
 condition|)
 block|{
 name|_revision
+operator|=
+name|txt
+expr_stmt|;
+block|}
+if|else if
+condition|(
+name|_type
+operator|==
+literal|null
+operator|&&
+name|context
+operator|.
+name|endsWith
+argument_list|(
+literal|"packaging"
+argument_list|)
+condition|)
+block|{
+name|_type
+operator|=
+name|txt
+expr_stmt|;
+name|_ext
 operator|=
 name|txt
 expr_stmt|;
